// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfigFromProgram should complement config from defaults 1`] = `
Object {
  "backend": "tiger",
  "hostname": null,
  "output": null,
  "password": null,
  "username": "valid",
  "workspaceId": "abc",
}
`;

exports[`getConfigFromProgram should handle case sensitivity 1`] = `
Object {
  "backend": "tiger",
  "hostname": null,
  "output": null,
  "password": null,
  "username": "valid",
  "workspaceId": null,
}
`;

exports[`getConfigFromProgram should handle empty object 1`] = `
Object {
  "backend": "tiger",
  "hostname": null,
  "output": null,
  "password": null,
  "username": null,
  "workspaceId": null,
}
`;

exports[`getConfigFromProgram should handle object with just some of the needed props 1`] = `
Object {
  "backend": "tiger",
  "hostname": null,
  "output": null,
  "password": null,
  "username": "noone",
  "workspaceId": null,
}
`;

exports[`getConfigFromProgram should prefer input over default 1`] = `
Object {
  "backend": "tiger",
  "hostname": null,
  "output": null,
  "password": null,
  "username": "valid",
  "workspaceId": "abc",
}
`;

exports[`getConfigFromProgram should propagate bear backend type 1`] = `
Object {
  "backend": "bear",
  "hostname": null,
  "output": null,
  "password": null,
  "username": null,
  "workspaceId": null,
}
`;
